--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "dev": "pnpm test",
-    "run-dev-server": "pnpm run-dev-server-15-3-2",
+    "run-dev-server": "pnpm run-dev-server-15-4-7",
+    "run-dev-server-15-4-7": "cd ./test/integration/next-app-15-4-7 && pnpm dev",
     "run-dev-server-15-3-2": "cd ./test/integration/next-app-15-3-2 && pnpm dev",
     "run-dev-server-15-0-3": "cd ./test/integration/next-app-15-0-3 && pnpm dev",
     "build": "tsup",
